# push-2-talk

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  README.md  package-lock.json  package.json  result-panel.html  vite.config.ts  windows-review-findings.md
.claude/: settings.local.json
.codex/: config.toml  hooks.json
.codex/hooks/: fusion-session-start.py
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: nsis-hooks.nsh
src-tauri/src/: assistant_processor.rs  audio_mute_manager.rs  audio_recorder.rs  audio_utils.rs  beep_player.rs  builtin_dictionary_updater.rs  clipboard_manager.rs  config.rs  hotkey_service.rs  lib.rs  llm_post_processor.rs  openai_client.rs  streaming_recorder.rs  text_inserter.rs  uia_text_reader.rs  win32_input.rs
src-tauri/src/asr/: doubao_ime.rs  mod.rs  race_strategy.rs
src-tauri/src/asr/realtime/: doubao.rs  qwen.rs
src-tauri/src/learning/: coordinator.rs  llm_judge.rs
src-tauri/src/pipeline/: assistant.rs  focus.rs  mod.rs  normal.rs  types.rs
src-tauri/src/tnl/: engine.rs  fuzzy.rs  mod.rs  types.rs
src/components/: MarkdownRenderer.tsx
src/components/common/: SmartToast.tsx  index.ts
src/components/history/: HistoryDrawer.tsx  TnlDiagnosticsSummary.tsx
src/components/layout/: RightPanel.tsx  Sidebar.tsx  TopStatusBar.tsx
src/components/live/: TranscriptDisplay.tsx
src/components/llm/: PresetModelSelect.tsx
src/constants/: index.ts
src/contexts/: ConfigSaveContext.tsx
src/hooks/: useAppServiceController.ts  useDictionary.ts  useHotkeyRecording.ts  useTauriEventListeners.ts
src/pages/: AsrPage.tsx  CustomAsrPage.tsx  DashboardPage.tsx  HistoryPage.tsx  LlmPage.tsx  ModelsPage.tsx  PreferencesPage.tsx  types.ts
src/types/: assistant-result.ts  index.ts
src/utils/: errorParser.ts  hotkey.ts  presetOverride.ts
src/windows/: NotificationWindow.tsx  OverlayWindow.tsx  ResultPanelWindow.tsx  result-panel-actions.ts  result-panel-main.tsx
tests/: assistantResultPanel.test.ts  presetOverride.test.ts
