[package]
name = "push-to-talk"
version = "1.7.0"
description = "A push-to-talk speech-to-text application"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
default-run = "push-to-talk"

[lib]
name = "push_to_talk_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "push-to-talk"
path = "src/main.rs"

[[bin]]
name = "test_api"
path = "src/test_api.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }
cpal = "0.15"
hound = "3.5"
arboard = "3.4"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "5.0"
base64 = "0.22"
rodio = "0.17"
uuid = { version = "1.0", features = ["v4"] }
flate2 = "1.0"
lazy_static = "1.4"
md5 = "0.7"
sha2 = "0.10"

# TNL 技术规范化层
aho-corasick = "1.1"      # 多模式匹配（词库保护）
strsim = "0.11"           # 编辑距离（模糊匹配）
pinyin = "0.10"           # 拼音转换（中文模糊匹配）
unicode-normalization = "0.1"  # Unicode 归一化
rphonetic = "3.0.6"       # 英文音标匹配（Double Metaphone）

# WebSocket 实时 ASR 支持
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
crossbeam-channel = "0.5"

# 豆包输入法 ASR 支持 (Protobuf + Opus)
# 注意：需要安装 CMake 才能编译 Opus
# Windows: choco install cmake
# 或从 https://cmake.org/download/ 下载安装
opus = { version = "0.3", optional = true }

# 开机自启动
tauri-plugin-autostart = "2"

# 自动更新
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# 打开外部链接
tauri-plugin-opener = "2"

# 单实例支持
tauri-plugin-single-instance = "2"

# Windows Audio Session API - 录音时静音其他应用
# Win32 Input API - 键盘模拟（替代 enigo）
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_UI_Accessibility",         # UI Automation API - 无干扰文本读取
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",  # 焦点管理: GetForegroundWindow, SetForegroundWindow, IsWindow
    "Win32_System_Threading",         # 焦点管理: GetCurrentThreadId, AttachThreadInput, GetWindowThreadProcessId
] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
# 豆包输入法 ASR 支持（需要 CMake 编译 Opus）
doubao-ime = ["dep:opus"]
# 默认启用豆包输入法
# 注意：如果 CMake 版本过新导致 opus 编译失败，可临时注释掉
default = ["doubao-ime"]

[dev-dependencies]
tempfile = "3"
